# YatCC

./: .gitignore  CMakeLists.txt  README.md  config.cmake
.devcontainer/: build-image.sh  yatcc.Containerfile
pybind11/: setup.sh
task/: CMakeLists.txt  config-5.cmake.in
task/0/: main.cpp
task/1/antlr/: README.md  SYsULexer.g4  main.cpp
task/2/antlr/: Ast2Asg.cpp  Ast2Asg.hpp  SYsULexer.cpp  SYsULexer.tokens  SYsUParser.g4
task/2/bison/: lex.cpp  par.y
task/3/: EmitIR.cpp  EmitIR.hpp
task/4/: AlgebraicIdentities.cpp  CMakeLists.txt  CommonSubexpressionElimination.cpp  CommonSubexpressionElimination.hpp  ConstantPropagation.cpp  DeadCodeElimination.cpp  DeadCodeElimination.hpp  Inline.cpp  Inline.hpp  InstructionCombining.cpp  InstructionCombining.hpp  LICM.cpp  LICM.hpp  LoopUnroll.cpp  LoopUnroll.hpp  StrengthReduction.cpp  main.cpp
task/4/llm/: LLMHelper.hpp  PassSequencePredict.cpp  PassSequencePredict.hpp
task/4/llm/prompts/: PassSeqPredSysPrTpl.xml  PassSeqPredUserPrTpl.xml  PassSummarySysPrTpl.xml  PassSummaryUserPrTpl.xml
task/5/: CMakeLists.txt  main.cpp
task/5/backEnd/: arm.cpp  arm.h
task/5/backEnd/asm/: algebraic_identity.h  asm_passes.cpp  asm_passes.h  register_allocation.h  remove_identical_moves.h  remove_redundant_ldrs.h  stack_ra.h  use_analysis.h
task/5/frontEnd/: MyVisitor.cpp  MyVisitor.h  SysY2022.g4  SysY2022.interp  SysY2022.tokens  SysY2022BaseVisitor.cpp  SysY2022BaseVisitor.h  SysY2022Lexer.cpp  SysY2022Lexer.h  SysY2022Lexer.interp  SysY2022Parser.cpp  SysY2022Parser.h  SysY2022Visitor.cpp  SysY2022Visitor.h
task/5/llm/: IRTrans.cpp  IRTrans.hpp  LLMHelper.cpp  __init__.py
task/5/llm/prompts/: Ir2AsmUserPrTpl.xml
task/5/middleEnd/: BasicBlock.cpp  BasicBlock.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  Label.cpp  Label.h  Loop.cpp  Loop.h  Module.cpp  Module.h  StringTable.cpp  StringTable.h  Type.cpp  Type.h  Variable.cpp  Variable.h  utils.h
task/5/opt/: DSE.cpp  DSE.h  LCSSA.cpp  LCSSA.h  LICM.cpp  LICM.h  SCEV.cpp  SCEV.h  computeUse.cpp  computeUse.h  constPro.cpp  constPro.h  constReplace.cpp  constReplace.h  createCFG.cpp  createCFG.h  cse.cpp  cse.h  dce.cpp  dce.h  inliner.cpp  inliner.h  loopAnalysis.cpp  loopAnalysis.h  loopUnroll.cpp  loopUnroll.h  mem2reg.cpp  mem2reg.h  reassociate.cpp  reassociate.h  reg2mem.cpp  reg2mem.h  simplifyCFG.cpp  simplifyCFG.h  strengthReduction.cpp  strengthReduction.h
test/: CMakeLists.txt  common.py
test/cases/functional-2/: 028_arr_defn3.sysu.c
test/cases/performance/: hoist.sysu.c
test/task0/: CMakeLists.txt  answer.py
test/task1/: CMakeLists.txt  answer.py
test/task2/: CMakeLists.txt  answer.py  score.py
test/task4/: CMakeLists.txt  score.py
test/task5/: CMakeLists.txt  answer.py  score.py
